up dated header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <a href="#about-me">About Me</a>
                 <a href="#work-sec">Work</a>
                 <a href="#contact-sec">Contact Me</a>
-                <a href="#">Resume</a>
              </ul>   
         </nav>
     </header>
@@ -75,12 +74,14 @@
         </p>
     </section>
 
-    <!-- Contact Me -->
+   
     <section>
     <section id="contact-sec" class="contact">
 
-        
-    <h2>CONTACT ME</h2>
+    <footer>    
+    <h3>CONTACT 
+        <br>
+        ME</h3>
         <nav>
             <ul>
                 <a href="tel:8182772529">Phone</a>
@@ -94,12 +95,6 @@
 
     </section>
 
-
-
-<footer>
-    <p>
-        Work in progress.
-    </p>
 
 </footer>
 
